--- a/src/styles.css
+++ b/src/styles.css
@@ -12,7 +12,7 @@ html {
 
 h1 {
   text-align: center;
-  font-size: 90px;
+  font-size: 60px;
   font-family: "Comic Sans MS", "Comic Sans", cursive;
   color: white;
   -webkit-text-stroke: 2px black;
@@ -20,7 +20,7 @@ h1 {
 
 h2 {
   text-align: center;
-  font-size: 40px;
+  font-size: 35px;
   color: white;
   -webkit-text-stroke: 1px black;
 }
@@ -64,8 +64,8 @@ h2 {
 }
 
 .mole {
-  /*background:url('./assets/mole.png') bottom center no-repeat;*/
-  background:url('https://github.com/Thinkful-Ed/js-dev-final-capstone-starter/blob/main/assets/mole.png?raw=true') bottom center no-repeat;
+  background: url('../assets/ninja.png') bottom center no-repeat;
+  /*background:url('https://github.com/Thinkful-Ed/js-dev-final-capstone-starter/blob/main/assets/mole.png?raw=true') bottom center no-repeat;*/
   background-size: 40%;
   position: absolute;
   top: 100%;
