change to clown background, font color, text shadow

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,6 @@
 html {
-  /*background: url('../assets/ninjabackground.png') no-repeat center center fixed;*/
-  background: url('https://github.com/Thinkful-Ed/js-dev-final-capstone-starter/blob/main/assets/background.png?raw=true') no-repeat center center fixed;
+  background: url('../assets/backgroundcircus.png') no-repeat center center fixed;
+  /*background: url('https://github.com/Thinkful-Ed/js-dev-final-capstone-starter/blob/main/assets/background.png?raw=true') no-repeat center center fixed;*/
   box-sizing: border-box;
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -12,16 +12,20 @@ html {
 
 h1 {
   text-align: center;
-  font-size: 60px;
+  font-size: 70px;
   font-family: "Comic Sans MS", "Comic Sans", cursive;
-  color: white;
+  color: rgb(0, 255, 196);
+  text-shadow: 2px 2px 5px blue;
   -webkit-text-stroke: 2px black;
 }
 
 h2 {
   text-align: center;
+  margin: 10px;
   font-size: 35px;
-  color: white;
+  color: rgb(0, 255, 196);
+  text-shadow: 2px 2px 5px blue;
+  font-family: "Comic Sans MS", "Comic Sans", cursive;
   -webkit-text-stroke: 1px black;
 }
 
@@ -31,7 +35,8 @@ h2 {
 }
 
 #timer{
-    color: white;
+  color: rgb(0, 255, 196);
+  text-shadow: 2px 2px 5px blue;
 }
 
 .grid {
@@ -51,14 +56,14 @@ h2 {
 
 .hole:after {
   display: block;
-  background: url("../assets/car.png") bottom center no-repeat;
+  background: url("../assets/carshadow.png") bottom center no-repeat;
   /*background: url("https://github.com/Thinkful-Ed/js-dev-final-capstone-starter/blob/main/assets/hole.png?raw=true") bottom center no-repeat;*/
   background-size:contain;
   content:'';
   width: 100%;
   height: 50%;
   position: absolute;
-  bottom: -10%;
+  bottom: -5%;
   z-index: 2;
   pointer-events:none;
 }
