--- a/src/styles.css
+++ b/src/styles.css
@@ -12,20 +12,18 @@ html {
 
 h1 {
   text-align: center;
-  font-size: 70px;
+  font-size: 60px;
   font-family: "Comic Sans MS", "Comic Sans", cursive;
-  color: rgb(0, 255, 196);
+  color: lightblue;
   text-shadow: 2px 2px 5px blue;
   -webkit-text-stroke: 2px black;
 }
 
 h2 {
   text-align: center;
-  margin: 10px;
   font-size: 35px;
-  color: rgb(0, 255, 196);
+  color: lightblue;
   text-shadow: 2px 2px 5px blue;
-  font-family: "Comic Sans MS", "Comic Sans", cursive;
   -webkit-text-stroke: 1px black;
 }
 
@@ -35,7 +33,7 @@ h2 {
 }
 
 #timer{
-  color: rgb(0, 255, 196);
+  color: lightblue;
   text-shadow: 2px 2px 5px blue;
 }
 
@@ -45,7 +43,7 @@ h2 {
   display: flex;
   flex-wrap: wrap;
   margin: 0 auto;
-  cursor: url('../assets/mallet.png'), auto;
+  cursor: url('../assets/malletSmall.png'), auto;
 }
 
 .hole {
